@@ -1,50 +1,44 @@
-#!/bin/sh -x
+#!/bin/sh
 
 # Run the test case as spark
 # We will use beeline to test it via the JDBC driver
 # /bin/su - spark -c "./test_spark/test_spark_thriftserver2.sh"
 
-curr_dir=`dirname $0`
-curr_dir=`cd $curr_dir; pwd`
-spark_logs=""
-spark_home=${SPARK_HOME:='/opt/spark'}
-spark_conf=""
-spark_version=$SPARK_VERSION
-
-source $spark_home/test_spark/init_spark.sh
-
 # Default SPARK_HOME location is already checked by init_spark.sh
-if [ "x${spark_home}" = "x" ] ; then
-  spark_home=/opt/spark
-  echo "ok - applying default location $spark_home"
-elif [ ! -d "$spark_home" ] ; then
-  >&2 echo "fail - $spark_home does not exist, please check you Spark installation, exinting!"
+spark_home=${SPARK_HOME:='/opt/spark'}
+if [ ! -d "$spark_home" ] ; then
+  >&2 echo "fail - $spark_home does not exist, please check you Spark installation or SPARK_HOME env variable, exinting!"
   exit -2
 else
   echo "ok - applying Spark home $spark_home"
 fi
+
+source $spark_home/test_spark/init_spark.sh
+
 # Default SPARK_CONF_DIR is already checked by init_spark.sh
-spark_conf=$SPARK_CONF_DIR
-if [ "x${spark_conf}" = "x" ] ; then
-  spark_conf=/etc/spark
-elif [ ! -d "$spark_conf" ] ; then
-  >&2 echo "fail - $spark_conf does not exist, please check you Spark installation or your SPARK_CONF_DIR env, exiting!"
+spark_conf=${SPARK_CONF_DIR:-"/etc/spark"}
+if [ ! -d "$spark_conf" ] ; then
+  >&2 echo "fail - $spark_conf does not exist, please check you Spark installation or your SPARK_CONF_DIR env value, exiting!"
   exit -2
 else
   echo "ok - applying spark config directory $spark_conf"
 fi
-echo "ok - applying Spark conf $spark_conf"
 
 spark_version=$SPARK_VERSION
 if [ "x${spark_version}" = "x" ] ; then
-  >&2 echo "fail - spark_version can not be identified, is end SPARK_VERSION defined? Exiting!"
+  >&2 echo "fail - SPARK_VERSION can not be identified or not defined, please review SPARK_VERSION env variable? Exiting!"
   exit -2
 fi
 
-spark_ts2_listen_port=20000
+curr_dir=`dirname $0`
+curr_dir=`cd $curr_dir; pwd`
+spark_logs=""
+spark_test_dir="$spark_home/test_spark"
+
+spark_ts2_listen_port=48600
 running_user=`whoami`
-# This needs to align with /etc/spark/log4j.properties
-spark_logs=${HOME}/Hadooplogs/spark/logs/spark.log
+# This needs to align with /etc/spark/yarnclient-driver-log4j.properties
+spark_logs=${HOME}/Hadooplogs/spark/logs/spark-driver-${spark_version}.log
 
 # Just inherit what is defined in spark-daemon.sh and load-spark-env.sh and /etc/spark/spark-env.sh
 # if [ "$SPARK_IDENT_STRING" = "" ]; then
@@ -56,26 +50,35 @@ fi
 
 pushd `pwd`
 cd $spark_home/sbin/
-mysql_jars=$(find /opt/mysql-connector/ -type f -name "mysql-*.jar")
-spark_opts_extra=
-for i in `find $hive_home/lib/ -type f -name "datanucleus*.jar"`
-do
-  spark_opts_extra="$spark_opts_extra $i"
-done
-hadoop_snappy_jar=$(find $HADOOP_HOME/share/hadoop/common/lib/ -type f -name "snappy-java-*.jar")
-hadoop_lzo_jar=$(find $HADOOP_HOME/share/hadoop/common/lib/ -type f -name "hadoop-lzo-*.jar")
-guava_jar=$(find $HIVE_HOME/lib/ -type f -name "guava-*.jar")
-spark_opts_extra=$(echo "$spark_opts_extra $mysql_jars,$hadoop_lzo_jar,$hadoop_snappy_jar,$guava_jar" | tr -s ' ' ' ' | tr -s ' ' ',')
 
-spark_files=$(find $hive_home/lib/ -type f -name "datanucleus*.jar" | tr -s '\n' ',')
-spark_files="$spark_files$mysql_jars,$spark_conf/hive-site.xml"
-
+sparksql_hivejars="$spark_home/lib/spark-hive_${SPARK_SCALA_VERSION}.jar"
+sparksql_hivethriftjars="$spark_home/lib/spark-hive-thriftserver_${SPARK_SCALA_VERSION}.jar"
 
 spark_event_log_dir=$(grep 'spark.eventLog.dir' ${spark_conf}/spark-defaults.conf | tr -s ' ' '\t' | cut -f2)
 
 echo "ok - starting thriftserver"
 
-ret=$(./start-thriftserver.sh --jars $spark_opts_extra --files $spark_files --hiveconf hive.server2.thrift.port=$spark_ts2_listen_port --hiveconf hive.server2.thrift.bind.host=$(hostname) --master yarn-client --queue research --executor-memory 1G --num-executors 4 --executor-cores 2 --driver-memory 1G --conf spark.locality.wait=10000 --conf spark.shuffle.manager=sort --conf spark.shuffle.consolidateFiles=true --conf spark.rdd.compress=true --conf spark.storage.memoryFraction=0.6 --conf spark.sql.inMemoryColumnarStorage.compressed=true --conf spark.sql.inMemoryColumnarStorage.batchSize=10240 --conf spark.eventLog.dir=${spark_event_log_dir}$USER/)
+ret=$(./start-thriftserver.sh --verbose \
+  --master yarn-client \
+  --driver-class-path $spark_conf/hive-site.xml:$spark_conf/yarnclient-driver-log4j.properties \
+  --jars $spark_conf/hive-site.xml,$sparksql_hivejars,$sparksql_hivethriftjars \
+  --archives hdfs:///user/$USER/apps/$(basename $(readlink -f $HIVE_HOME))-lib.zip#hive \
+  --conf spark.yarn.am.extraJavaOptions="-Djava.library.path=$HADOOP_HOME/lib/native/" \
+  --conf spark.driver.extraJavaOptions="-Dlog4j.configuration=yarnclient-driver-log4j.properties -Djava.library.path=$HADOOP_HOME/lib/native/" \
+  --conf spark.executor.extraJavaOptions="-Dlog4j.configuration=executor-log4j.properties -XX:+PrintReferenceGC -verbose:gc -XX:+PrintGCDetails -XX:+PrintGCTimeStamps -XX:+PrintAdaptiveSizePolicy -Djava.library.path=$HADOOP_HOME/lib/native/" \
+  --executor-memory 1G \
+  --num-executors 4 \
+  --executor-cores 2 \
+  --driver-memory 1G \
+  --conf spark.eventLog.dir=${spark_event_log_dir}/$USER \
+  --conf spark.locality.wait=10000 \
+  --conf spark.shuffle.manager=sort \
+  --conf spark.shuffle.consolidateFiles=true \
+  --conf spark.rdd.compress=true \
+  --conf spark.sql.inMemoryColumnarStorage.compressed=true \
+  --conf spark.sql.inMemoryColumnarStorage.batchSize=10240 \
+  --hiveconf hive.server2.thrift.port=$spark_ts2_listen_port \
+  --hiveconf hive.server2.thrift.bind.host=$(hostname))
 if [ $? -ne "0" ] ; then
   >&2 echo "fail - can't start thriftserver, something went wrong, see $ret"
   exit -3
@@ -98,12 +101,13 @@ ts2_yarn_app_id=""
 log_check_ts2="true"
 pid_check_ts2="true"
 nc_check_ts2="true"
+
 # TBD: This is not a good way to check if it is up and running, however, it's a start. Can check PID, etc as well.
 start_log_line=$(grep -n "Starting SparkContext" $spark_logs | tail -n 1 | cut -d":" -f1)
 if [ "x${start_log_line}" = "x" ] ; then
-  >&2 echo "warn - log rotated so fast? can't find the starting string to search for."
+  >&2 echo "warn - log rotated so fast? can't find the starting string 'Starting SparkContext' to search for in $spark_logs"
 else
-  ts2_ret_str=$(tail -n +${start_log_line} $spark_logs | grep -i 'ThriftBinaryCLIService listening on')
+  ts2_ret_str=$(tail -n +${start_log_line} $spark_logs | grep -i 'Starting ThriftBinaryCLIService on port')
   ts2_yarn_app_id=$(tail -n +${start_log_line} $spark_logs | grep -io 'Submitted application .*' | tail -n 1 | cut -d" " -f3)
   if [ "x${ts2_ret_str}" = "x" ] ; then
     >&2 echo "fail - something is wrong, can't detect service listening string 'ThriftBinaryCLIService listening on', the service is taking longer then 60 seconds to start? This is odd on a fresh VPC, please manually check Spark TS2!"
@@ -116,6 +120,7 @@ fi
 nc_ret=$(netstat -lt | grep $spark_ts2_listen_port)
 if [ "x${nc_ret}" = "x" ] ; then
   nc_check_ts2="false"
+  >&2 echo "fail - couldn't locate network port $spark_ts2_listen_port for Spark TS2"
 fi
 
 spark_pid=$(cat $spark_ts2_pid_str | tr -d '\n')
@@ -126,6 +131,12 @@ if [ "x${pid_ret}" = "x0" ] ; then
 else
   echo "ok - Spark ThriftServer2 PID $spark_pid found"
 fi
+
+echo "ok - =========================================="
+echo "ok - you may execute \"yarn logs -applicationId ${ts2_yarn_app_id}\" to inspect executor logs"
+echo "ok - or inspect $spark_logs for spark driver logs"
+echo "ok - =========================================="
+sleep 3
 
 if [ "x${log_check_ts2}" = "false" -a "x${log_check_ts2}" = "false" -a "x${pid_check_ts2}" = "xfalse" ] ; then
   >&2 echo "fail - all pid check, log check and port check failed, Spark ThriftServer2 is not running, stopping it, and please check!"
@@ -154,19 +165,48 @@ else
   echo "ok - query Hive table spark_hive_test_yarn_cluster_table successfully, we see: $jdbc_ret"
 fi
 
+table_uuid=$(cat /dev/urandom | tr -dc 'a-zA-Z0-9' | fold -w 12 | head -n 1)
+db_name="spark_test_db_${table_uuid}"
+table_name="spark_hive_test_table_${table_uuid}"
+new_table_name="new_spark_hive_test_table_${table_uuid}"
+orc_table_name="orc_spark_hive_test_table_${table_uuid}"
+parquet_table_name="parquet_spark_hive_test_table_${table_uuid}"
+
+test_create_database_sql1="CREATE DATABASE IF NOT EXISTS ${db_name}"
+test_create_table_sql1="CREATE TABLE $table_name (key INT, value STRING) ROW FORMAT DELIMITED FIELDS TERMINATED BY ',' STORED AS TEXTFILE"
+test_alter_table_sql1="ALTER TABLE $table_name RENAME TO $new_table_name"
+test_describe_table_sql1="DESCRIBE FORMATTED $new_table_name"
+test_truncate_table_sql1="TRUNCATE TABLE $new_table_name"
+test_load_data_sql1="LOAD DATA LOCAL INPATH '${spark_test_dir}/test_data/sparksql_testdata2.csv' INTO TABLE $new_table_name"
+test_select_sql1="SELECT SUM(key) FROM $new_table_name"
+# Only works with Hive 1.2.x. Bug on Hive 0.13.1
+test_create_orc_sql1="CREATE TABLE $orc_table_name STORED AS ORC AS SELECT key,value FROM $new_table_name"
+test_create_parquet_sql1="CREATE TABLE $parquet_table_name STORED AS PARQUET AS SELECT * FROM $new_table_name"
+test_select_orc_sql1="SELECT SUM(key) FROM $orc_table_name"
+test_select_parquet_sql1="SELECT SUM(key) FROM $parquet_table_name"
+test_drop_table_sql1="DROP TABLE $new_table_name"
+test_drop_orc_table_sql1="DROP TABLE $orc_table_name"
+test_drop_parquet_table_sql1="DROP TABLE $parquet_table_name"
+test_drop_database_sql1="DROP DATABASE IF EXISTS ${db_name}"
+
+jdbc_ret=$(beeline -u "jdbc:hive2://$(hostname):$spark_ts2_listen_port" -n alti-test-01 -p "" -e "$test_create_database_sql1; USE $db_name; $test_create_table_sql1 ; $test_alter_table_sql1 ; $test_describe_table_sql1; $test_truncate_table_sql1 ; $test_load_data_sql1 ; $test_create_orc_sql1; $test_create_parquet_sql1; $test_select_sql1 ; $test_select_orc_sql1; $test_select_parquet_sql1; $test_drop_table_sql1 ; $test_drop_orc_table_sql1; $test_drop_parquet_table_sql1; $test_drop_database_sql1; " 2>&1)
+error_str=$(echo $jdbc_ret | grep -io "Error:" | head -n 1 | tr [:upper:] [:lower:])
+if [ "x${error_str}" = "xerror:" ] ; then
+  >&2 echo "fail - beeline can't query hive table spark_hive_test_yarn_cluster_table via Spark ThriftServer2 due to $jdbc_ret"
+else
+  echo "ok - query Hive table spark_hive_test_yarn_cluster_table successfully, we see: $jdbc_ret"
+fi
+
 # Done testing, stop the service. Not expecting a lot of data from YARN log
 ./stop-thriftserver.sh
 yarn_ret=$(2>/dev/null yarn application -status $ts2_yarn_app_id | grep 'State : FINISHED' | tr -d '\t' | tr -d ' ' | tr [:upper:] [:lower:] | head -n 1)
 if [ "x${yarn_ret}" = "xstate:finished" ] ; then
-  echo "ok - test completed, printing last 100 lines from YARN log for record"
-  yarn logs -applicationId $ts2_yarn_app_id | tail -n 100
+  echo "ok - test completed, printing last 100 lines from Spark TS's Driver log for record"
+  popd
+  exit 0
 else
   >&2 echo "fail - Spark TS2 YARN application did not end with State FINISHED, something is wrong, printing all logs for debugging!"
-  yarn logs -applicationId $ts2_yarn_app_id
+  >&2 echo "fail - you may execute \"yarn logs -applicationId ${ts2_yarn_app_id}\" to inspect executor logs, and $spark_logs for spark driver logs"
+  popd
+  exit -9
 fi
-
-popd
-
-exit 0
-
-
